# BeeblebroxCTF

./: .gitignore  Credits.md  Level-Discribtion.md  QuckStart.md  README.md  TODO
Info/: MariaDB-Setup.md  MongoDB-Setup.md  NodeJS-Setup.md  SolutionGuide.md  SolveCTF09.py  SolveCTF11.py  Welcome.ascii  credentials.json  credentials.txt  ctf_level_pw.kdbx
Info/DB/: UserPW10.txt  UserPW11.txt  all_databases.sql
Info/ctf/: users.bson  users.metadata.json
Info/data/: Server  Solution.html  root
NodeJSServer/: README.md  app.js  package-lock.json  package.json
NodeJSServer/config/: links.js  loaddata.js  mariadb.js  mysql.js  passport.js
NodeJSServer/data/: LevelInfo.json
NodeJSServer/models/: Users.js
NodeJSServer/routes/: auth.js  index.js
NodeJSServer/routes/ctf/: ctf-router.js
NodeJSServer/routes/solutions/: solutions-router.js
NodeJSServer/routes/tasks/: level-router.js
NodeJSServer/views/: about.ejs  credits.ejs  error.ejs  example.ejs  logedin.ejs  login.ejs  tipps.ejs
NodeJSServer/views/ctf/: level_06.ejs  level_07.ejs  level_08.ejs  level_09.ejs  level_10-result.ejs  level_10.ejs  level_11-result.ejs  level_11.ejs
NodeJSServer/views/err/: dev-err.ejs  not-found.ejs  unauthorized.ejs
NodeJSServer/views/partials/: footer.ejs  head.ejs  navbar.ejs  scripts.ejs  sidebar.ejs  welcome.ejs
NodeJSServer/views/solutions/: gen-level-sol.ejs  solution-index.ejs
NodeJSServer/views/task/: gen_level_disc.ejs  register.ejs  task-index.ejs  win.ejs
Tools/: Compress-ExpandLevels.sh  createUser.py  deployCTF.py  installLevel.py  packageCheck.py  secureMaria.sh  setMariaDB.py  setMongoDB.py  tools.py
Tools/Downloads/: Info.md
Tools/creation/: BinWriter.py  BinaryWriter.cpp  CMakeLists.txt  Client.cpp  PinForPW.cpp  PrefixAdder.cpp  Server1.cpp  Server2.cpp
level_00/: -  level_00_install.sh
level_01/: level_01_install.sh
level_02/: level_02_install.sh
level_03/: PW-Safe  level_03_install.sh
level_04/: level_04_install.sh
level_05/: ReadMe
level_06/: Level6.md
level_07/: Level7.md
level_08/: Level8.md
level_09/: Level9.md
level_10/: Level10.md
level_11/: Level11.md
level_12/: ReadMe.md  Server
level_13/: pw.zip.hash
level_14/: tatu-key-ecdsa  tatu-key-ecdsa.pub
level_15/: ReadMe.md  ctf15.pw
